# rust-rustls-deepin

./: Cargo.toml
.pc/1001_hashbrown.patch/: Cargo.toml
.pc/1001_x509-parser.patch/: Cargo.toml
.pc/2001_native_certs.patch/: Cargo.toml
.pc/2001_native_certs.patch/rustls/src/: lib.rs
.pc/2002_asn1.patch/: Cargo.toml
.pc/2002_aws-lc-rs.patch/: Cargo.toml
.pc/2002_aws-lc-rs.patch/rustls/: Cargo.toml
.pc/2002_aws_lc_rs.patch/: Cargo.toml
.pc/2002_aws_lc_rs.patch/rustls/: Cargo.toml
.pc/2002_brotli.patch/: Cargo.toml
.pc/2002_hashbrown.patch/: Cargo.toml
.pc/2002_hickory-resolver.patch/: Cargo.toml
.pc/2002_hickory-resolver.patch/examples/: Cargo.toml
.pc/2002_hpke-rs.patch/: Cargo.toml
.pc/2002_itertools.patch/: Cargo.toml
.pc/2002_macro_rules_attribute.patch/: Cargo.toml
.pc/2002_macro_rules_attribute.patch/rustls/: Cargo.toml
.pc/2002_macro_rules_attribute.patch/rustls/src/: lib.rs  verifybench.rs
.pc/2002_macro_rules_attribute.patch/rustls/src/client/: handy.rs
.pc/2002_rustls-webpki.patch/: Cargo.toml
.pc/2002_zlib-rs.patch/: Cargo.toml
.pc/2002_zlib-rs.patch/rustls/: Cargo.toml
.pc/2004_no_feature_read_buf.patch/rustls/: Cargo.toml
.pc/2005_no_bench.patch/: Cargo.toml
.pc/2005_no_bench.patch/rustls/: Cargo.toml
.pc/2005_no_bogo.patch/: Cargo.toml
bogo/: Cargo.toml
ci-bench/: Cargo.toml
connect-tests/: Cargo.toml
connect-tests/tests/: badssl.rs  topsites.rs
debian/: TODO  changelog  control  copyright  copyright-check  copyright_hints  gbp.conf  install  rules  watch
debian/patches/: 1001_asn1.patch  1001_hashbrown.patch  1001_x509-parser.patch  1002_feature_fencing.patch  2001_native_certs.patch  2002_asn1.patch  2002_aws-lc-rs.patch  2002_aws_lc_rs.patch  2002_brotli.patch  2002_hashbrown.patch  2002_hickory-resolver.patch  2002_hpke-rs.patch  2002_itertools.patch  2002_macro_rules_attribute.patch  2002_rustls-webpki.patch  2002_zlib-rs.patch  2003_network_access.patch  2004_no_feature_read_buf.patch  2005_no_bench.patch  2005_no_bogo.patch  series
debian/tests/: control
debian/upstream/: metadata
examples/: Cargo.toml
provider-example/: Cargo.toml
provider-example/examples/: client.rs
rustls/: Cargo.toml
rustls-bench/: Cargo.toml
rustls-post-quantum/: Cargo.toml
rustls-provider-test/: Cargo.toml
rustls/src/: lib.rs  suites.rs  verifybench.rs
rustls/src/client/: handy.rs  test.rs
rustls/src/server/: handy.rs  test.rs
rustls/src/tls12/: mod.rs
rustls/src/tls13/: key_schedule.rs
rustls/src/webpki/: client_verifier.rs  mod.rs  server_verifier.rs
rustls/tests/: api.rs
