[package]
name = "rustls-bench"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
clap = { workspace = true }
rustls = { path = "../rustls" }
rustls-graviola = { workspace = true, optional = true }
rustls-test = { workspace = true }

[features]
default = []
graviola = ["dep:rustls-graviola"]
ring = ["rustls/ring"]

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = { workspace = true }
