[workspace]
members = [
  # Bogo test shim
  "bogo",
  # CI benchmarks
  "ci-bench",
  # Network-based tests
  "connect-tests",
  # tests and example code
  "examples",
  # Tests that require OpenSSL
  "openssl-tests",
  # the main library and tests
  "rustls",
  # benchmarking tool
  "rustls-bench",
]

## Deliberately not included in `members`:
exclude = [
  # `cargo fuzz` integration (requires nightly)
  "fuzz",
  # experimental post-quantum algorithm support
  # (conflicting feature requirements with `rustls`)
  "rustls-post-quantum",
]

default-members = [
  "examples",
  "rustls",
]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0.73"
asn1 = ">= 0.17.0, <= 0.20"
async-std = { version = "1.12.0", features = ["attributes"] }
async-trait = "0.1.74"
base64 = "0.22"
bencher = "0.1.5"
brotli = { version = ">= 6.0.0, <= 7", default-features = false, features = ["std"] }
brotli-decompressor = "4.0.1" # 4.0.1 required for panic fix
byteorder = "1.4.3"
chacha20poly1305 = { version = "0.10", default-features = false, features = ["alloc"] }
clap = { version = "4.3.21", features = ["derive", "env"] }
crabgrind = "=0.1.9" # compatible with valgrind package on GHA ubuntu-latest
der = "0.7"
ecdsa = "0.16.8"
env_logger = "0.11"
fxhash = "0.2.1"
hashbrown = { version = "0.14", default-features = false, features = ["ahash", "inline-more"] }
hex = "0.4"
hmac = "0.12"
hpke-rs = "0.2"
hpke-rs-crypto = "0.2"
hpke-rs-rust-crypto = "0.2"
itertools = "0.13"
log = { version = "0.4.8" }
mio = { version = "1", features = ["net", "os-poll"] }
num-bigint = "0.4.4"
once_cell = { version = "1.16", default-features = false, features = ["alloc", "race"] }
openssl = "0.10"
p256 = { version = "0.13.2", default-features = false, features = ["alloc", "ecdsa", "pkcs8"] }
pkcs8 = "0.10.2"
pki-types = { package = "rustls-pki-types", version = "1.10", features = ["alloc"] }
rand_core = { version = "0.6", features = ["getrandom"] }
rayon = "1.7"
rcgen = { version = "0.13", features = ["pem"] }
regex = "1"
ring = "0.17"
rsa = { version = "0.9", features = ["sha2"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = { version = "0.10", default-features = false }
signature = "2"
subtle = { version = "2.5.0", default-features = false }
time = { version = "0.3.6", default-features = false }
tikv-jemallocator = "0.6"
tokio = { version = "1.34", features = ["io-util", "macros", "net", "rt"]}
webpki = { package = "rustls-webpki", version = "0.102.8", features = ["alloc"], default-features = false }
rustls-native-certs = "0.6"
x25519-dalek = "2"
zeroize = "1.7"
zlib-rs = "0.4"

[profile.bench]
codegen-units = 1
lto = true
